[project]
name = "repl-nix-accessbotai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "openai>=1.6.1",
    "psycopg2-binary>=2.9.10",
    "werkzeug",
    "sqlalchemy",
    "google-cloud-core>=2.4.1",
    "google-auth>=2.36.0",
    "pytesseract>=0.3.13",
    "python-magic>=0.4.27",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-cloud-asset",
    "google-cloud-resource-manager",
    "google-cloud-iam",
    "pypdf2>=3.0.1",
    "pdfminer>=20191125",
    "scikit-learn>=1.6.0",
    "py2neo",
    "sift-stack-py>=0.2.2",
    "neo4j>=5.27.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]
