[project]
name = "repl-nix-accessbotai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "openai>=1.6.1",
    "werkzeug",
    "google-auth>=2.36.0",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-cloud-asset",
    "neo4j>=5.27.0",
    "neo4j-driver>=5.27.0",
    "sift-stack-py",
    "flask-sqlalchemy",
    "sqlalchemy",
    "google-api-core>=2.23.0",
    "googleapis-common-protos>=1.66.0",
    "protobuf>=5.28.3",
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
]
